[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["full"] }
native-tls = "0.2"
aes-gcm = "0.9"
futures = "0.3"
tokio-native-tls = "0.3"