[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
openssl = { version = "0.10.38" }
hyper-tls = "0.5.0"
local-ip-address = "0.4.4"
substring = "1.4.5"